# bulwark

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  dashboard-mockup.html  docker-compose.yml  pyproject.toml
.claude/: launch.json
.claude/skills/bulwark-bench/: SKILL.md
.github/workflows/: docker-publish.yml  publish.yml  test.yml
dashboard/: __init__.py  __main__.py  api_v1.py  app.py  com.bulwark.dashboard.plist  config.py  db.py  install-service.sh  llm_factory.py  models.py  run-dashboard.sh
dashboard/static/: index.html
docs/: README.md  api-reference.md  async.md  batch.md  cli.md  config.md  dashboard.md  detection.md  layers.md  openclaw.md  python-library.md  red-teaming.md  two-phase.md
docs/codex-security/: bulwark-security-review.txt
docs/codex-security/archive/: bulwark-security-review-v1.txt
docs/integrations/: wintermute.md
docs/superpowers/audits/2026-04-30-doc-audit/: 00-synthesis.md  01-root-onboarding.md  02-interfaces-ops.md  03-architecture-concepts.md  04-integrations.md  05-dashboard-ui.md  06-rewriter-report.md
docs/superpowers/audits/2026-05-01-simplification/: 00-synthesis.md  01-deferred-code-bugs.md  02-backcompat-v1-leftovers.md  03-sister-packages.md  04-adr-spec-hygiene.md  05-test-suite-dedup.md  06-dashboard-jsx.md
docs/superpowers/plans/: 2026-04-29-codex-efficacy-hardening.md  2026-04-30-phase-h-encoding-decoders.md
docs/superpowers/specs/: 2026-04-30-phase-h-encoding-decoders-design.md
examples/: email_triage.py  garak_testing.py  llm_guard_integration.py  promptguard_integration.py  quickstart_anthropic.py  quickstart_clean.py  quickstart_generic.py  quickstart_openai.py  quickstart_protect.py
integrations/openclaw/: README.md  docker-compose.bulwark.yml  install.sh
integrations/openclaw/plugin/: index.js  package.json
integrations/openclaw/skills/bulwark-sanitize/: SKILL.md
spec/: falsepos_corpus.jsonl  openapi.yaml  presets.yaml
spec/contracts/: bulwark_bench.yaml  bulwark_falsepos.yaml  canaries.yaml  clean.yaml  cli.yaml  dashboard_layer_status.yaml  dashboard_ui.yaml  docker_hardening.yaml  docker_persistence.yaml  e2e_ci.yaml  env_config.yaml  executor.yaml  guard.yaml  http_auth.yaml  http_clean.yaml  http_config.yaml  http_guard.yaml  http_healthz.yaml  http_llm_test.yaml  http_pipeline.yaml  integrations_toggle.yaml  isolator.yaml  llm_facing_tiers.yaml  llm_judge.yaml  openclaw_integration.yaml  presets.yaml  redteam_reports.yaml  redteam_scoring.yaml  redteam_tiers.yaml  sanitizer.yaml  validator.yaml  webhooks.yaml
spec/decisions/: 001-spec-driven-development.md  002-two-phase-execution.md  003-convenience-api-tiers.md  004-clean-defaults.md  005-proxy-pattern-protect.md  006-no-openai-protect.md  007-http-api-response-codes.md  008-docker-distribution.md  009-package-rename.md  010-redteam-tiers.md  011-openclaw-integration.md  012-redteam-scoring-and-retest.md  013-dashboard-auth.md  014-unified-clean-endpoint.md  015-ssrf-allowlist.md  016-dotenv-autoload.md  017-bulwark-bench.md  018-llm-facing-tiers.md  019-docker-image-hardening.md  020-dashboard-react-babel.md  021-presets-source-of-truth.md  022-env-vars-are-defaults-not-locks.md  023-bundle-presets-into-wheel.md  024-contracts-for-core-defense-modules.md  025-canary-management-api.md  026-external-webhook-on-blocked-events.md  027-llm-key-never-leaves-configured-origin.md  028-bridge-sanitizer-strips-html.md  029-loopback-only-mutations-when-token-unset.md  030-medium-security-findings-sweep.md  031-pipeline-simplification.md  032-detector-chunking.md  033-llm-judge-detector.md  034-bench-detector-config-sweep.md  035-remove-llm-facing-tiers.md  036-false-positive-harness.md  037-p1-security-fixes.md  038-mandatory-detector-visibility.md  039-codex-prb-hardening.md  040-fail-closed-when-no-detectors.md  (+13 more)
src/bulwark/: __init__.py  attacks.py  canary.py  canary_shapes.py  cli.py  decoders.py  detector_chain.py  events.py  executor.py  guard.py  isolator.py  pipeline.py  presets.py  sanitizer.py  shortcuts.py  trust_boundary.py  validator.py
src/bulwark/dashboard/: __main__.py  api_v1.py  app.py  config.py  db.py  llm_factory.py  models.py  run-dashboard.sh  url_validator.py
src/bulwark/dashboard/static/: index.html
src/bulwark/dashboard/static/src/: app.jsx  data.jsx  page-configure.jsx  page-events.jsx  page-leak-detection.jsx  page-shield.jsx  (+3 more)
src/bulwark/detectors/: __init__.py  llm_judge.py
src/bulwark/integrations/: __init__.py  anthropic.py  garak.py  promptguard.py  redteam.py
src/bulwark/tools/: __init__.py
src/bulwark/tools/bench/: __init__.py  __main__.py  runner.py
src/bulwark/tools/falsepos/: __main__.py  corpus.py  runner.py
src/bulwark_bench/: __init__.py  __main__.py  bulwark_client.py  configs.py  pricing.py  report.py  runner.py
src/bulwark_falsepos/: __init__.py  __main__.py  report.py  runner.py
tests/: _node_helpers.py  benchmark.py  conftest.py  test_anthropic_integration.py  test_async_pipeline.py  test_attacks.py  test_auth.py  test_bulwark_bench.py  test_bulwark_falsepos.py  test_canary.py  test_canary_shapes.py  test_clean_decode.py  test_cli.py  test_codex_prb_hardening.py  test_content_byte_limit.py  test_contracts.py  test_dashboard_api.py  test_dashboard_layers.py  test_dashboard_ui_configure.py  test_dashboard_ui_events.py  test_dashboard_ui_shell.py  test_dashboard_ui_shield.py  test_dashboard_ui_test_page.py  test_decoders.py  test_detector_chain.py  test_detector_chunking.py  test_detector_required.py  test_docker_hardening.py  test_e2e.py  test_e2e_real_detectors.py  test_env_truthy.py  test_events.py  test_executor.py  test_fail_closed_no_detectors.py  test_falsepos_error_classification.py  test_garak_integration.py  test_http_api.py  test_integration_examples.py  test_isolator.py  test_llm_facing_tiers.py  (+18 more)
