[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/bulwark", "src/bulwark_bench"]

[project]
name = "bulwark-shield"
dynamic = ["version"]
description = "Architectural defense against prompt injection. Because detection is an arms race."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "security", "prompt-injection", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
cli = ["click>=8.0"]
dashboard = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "pydantic>=2.0", "pyyaml>=6.0", "httpx>=0.24.0", "anthropic>=0.39.0"]
testing = ["garak>=0.9,<1.0"]
all = ["anthropic>=0.39.0", "click>=8.0", "fastapi>=0.100.0", "uvicorn>=0.20.0", "pydantic>=2.0", "pyyaml>=6.0", "httpx>=0.24.0", "garak>=0.9,<1.0"]

[project.scripts]
bulwark = "bulwark.cli:main"
bulwark-bench = "bulwark_bench.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
