[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/bulwark", "src/bulwark_bench", "src/bulwark_falsepos"]

# Bundle spec/presets.yaml into the wheel under bulwark/_data/ so
# importlib.resources can find it in installed environments. The source
# of truth stays in spec/ — this is a build-time copy, not a tracked
# duplicate. See ADR-023.
[tool.hatch.build.targets.wheel.force-include]
"spec/presets.yaml" = "bulwark/_data/presets.yaml"
"spec/falsepos_corpus.jsonl" = "bulwark_falsepos/_data/falsepos_corpus.jsonl"

[project]
name = "bulwark-shield"
dynamic = ["version"]
description = "Architectural defense against prompt injection. Because detection is an arms race."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "security", "prompt-injection", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
cli = ["click>=8.0"]
dashboard = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "pydantic>=2.0", "pyyaml>=6.0", "httpx>=0.24.0", "anthropic>=0.39.0"]
# bulwark-bench talks to a running dashboard over HTTP; httpx is its only
# extra runtime dep. Declared separately so `pip install bulwark-shield[bench]`
# works without pulling in the full dashboard stack.
bench = ["httpx>=0.24.0", "pyyaml>=6.0"]
testing = ["garak>=0.9,<1.0"]
all = ["anthropic>=0.39.0", "click>=8.0", "fastapi>=0.100.0", "uvicorn>=0.20.0", "pydantic>=2.0", "pyyaml>=6.0", "httpx>=0.24.0", "garak>=0.9,<1.0"]

[project.scripts]
bulwark = "bulwark.cli:main"
bulwark-bench = "bulwark_bench.__main__:main"
bulwark-falsepos = "bulwark_falsepos.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# ADR-045 / G-E2E-DETECTOR-CI-001: the e2e_slow marker isolates the
# real-detector lane (downloads ~700 MB of HuggingFace weights, ~30-60s
# per invocation). The default `pytest tests/` invocation must stay fast
# for local dev iteration, so addopts excludes the marker by default.
# CI opts in explicitly with `pytest -m e2e_slow`.
markers = [
    "e2e_slow: end-to-end tests that load real ML detector weights (slow, CI-only)",
]
addopts = "-m 'not e2e_slow'"
